--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,23 @@
-.App {
-  text-align: center;
-}
+html, body { color: #434242; font-family: 'Open Sans', sans-serif !important; height: 100%; }
+body { background: #EBF1F3; font-size: 15px; line-height: 1.64; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, strong, b { font-family: 'Open Sans', sans-serif !important; margin-bottom: 20px; }
+h1,h4 { font-weight: 700; margin-bottom: 10px; }
+h2,h3 { font-weight: 300; color: #151949; }
+h2 { font-size: 54px; text-align: center; }
+h3 { font-size: 28px; }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@media (max-width: 767px) { 
+  
+  
+  .navbar  { left: 0px; width: 100%; }
+  .navbar .nav > li { height: 60px; }
+  .navbar .nav > li a { height: 60px; text-align: center; padding-top: 20px; font-weight: 600; color: #FFFFFF; }
+  
+  .fixed .navbar { top: 0px; }
+  
+  .container { padding: 60px 20px; min-width: 280px; }
+  .hidden-phone { display: none; }
+  
+  
+} 
