--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,3 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600,700');
 html, body { color: #434242; font-family: 'Open Sans', sans-serif !important; height: 100%; }
 body { background: #EBF1F3; font-size: 15px; line-height: 1.64; }
-
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, strong, b { font-family: 'Open Sans', sans-serif !important; margin-bottom: 20px; }
-h1,h4 { font-weight: 700; margin-bottom: 10px; }
-h2,h3 { font-weight: 300; color: #151949; }
-h2 { font-size: 54px; text-align: center; }
-h3 { font-size: 28px; }
-
-@media (max-width: 767px) { 
-  
-  
-  .navbar  { left: 0px; width: 100%; }
-  .navbar .nav > li { height: 60px; }
-  .navbar .nav > li a { height: 60px; text-align: center; padding-top: 20px; font-weight: 600; color: #FFFFFF; }
-  
-  .fixed .navbar { top: 0px; }
-  
-  .container { padding: 60px 20px; min-width: 280px; }
-  .hidden-phone { display: none; }
-  
-  
-} 
