--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,7 +8,7 @@ h2 { font-size: 54px; text-align: center; }
 h3 { font-size: 28px; }
 
 .background-gray { background: #434242; }
-.container { max-width: 1280px; padding: 40px 180px; }
+.contactContainer { max-width: 1280px; padding: 40px 180px; }
 
 p.lead { text-align: center; color: #58637d; }
 p.lead a { color: #FFFFFF; text-decoration: underline; }
@@ -35,6 +35,7 @@ hr { margin: 40px 0px; border-color: #58637d; opacity: 0.2; filter:alpha(opacity
 #contact a:hover { opacity: 1; filter:alpha(opacity=100); text-decoration: none; }
 
 @media (max-width: 767px) { 
+	.contactContainer { padding: 60px 20px; min-width: 280px; }
 	#contact { padding-bottom: 60px; }
 	#contact a .icon { float: left; margin-right: 10px; }
-}  
+} 
