--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -8,7 +8,7 @@ h2 { font-size: 54px; text-align: center; }
 h3 { font-size: 28px; }
 
 .background-snowwhite { background: #EBF1F3; }
-.container { max-width: 1280px; padding: 40px 180px; }
+.profileContainer { max-width: 1280px; padding: 40px 180px; }
 hr { margin: 40px 0px; border-color: #58637d; opacity: 0.2; filter:alpha(opacity=20); }
 
 p.lead { text-align: center; color: #58637d; }
@@ -24,5 +24,6 @@ p.lead a:hover { text-decoration: none; }
 #profile .row > div img { width: 100%; max-width: 246px; height: auto; }
 
 @media (max-width: 767px) { 
+	.profileContainer { padding: 60px 20px; min-width: 280px; }
 	#profile .row * { text-align: center; }
 }  
