--- a/src/components/Abilities/Abilities.css
+++ b/src/components/Abilities/Abilities.css
@@ -21,7 +21,7 @@ ul.no-bullets { list-style-type: none; margin: 0px; padding: 0px; }
 .btn-primary:hover {border-color: #326FBA; }
 
 #abilities ul > li { min-height: 30px; padding: 3px 0px; }
-#abilities ul > li:hover { background: #E0E7ED; }
+#abilities ul > li:hover { background: #c3ddf3;}
 #abilities ul > li .ability-title { display: inline-block; width: 60%; }
 #abilities ul > li .ability-score { float: right; }
 #abilities ul > li .ability-score .glyphicon { 
