--- a/src/components/Abilities/Abilities.css
+++ b/src/components/Abilities/Abilities.css
@@ -8,7 +8,7 @@ h2 { font-size: 54px; text-align: center; }
 h3 { font-size: 28px; }
 
 .background-snowwhite { background: #EBF1F3; }
-.abilitiesContainer { max-width: 1280px; padding: 40px 180px; }
+.abilitiesContainer { padding: 40px; }
 hr { margin: 40px 0px; border-color: #58637d; opacity: 0.2; filter:alpha(opacity=20); }
 
 p.lead { text-align: center; color: #58637d; }
