--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,7 +8,7 @@ h2 { font-size: 54px; text-align: center; }
 h3 { font-size: 28px; }
 
 .background-snowblue { background: #DAE6F1; }
-.projectsContainer { padding: 40px 180px; }
+.projectsContainer { max-width: 1280px; padding: 40px 180px; }
 .cvContainer { padding: 0px; margin: 0px; width: 0px; height: 0px; }
 hr { margin: 40px 0px; border-color: #58637d; opacity: 0.2; filter:alpha(opacity=20); }
 
